Add token payments for review invoices
